--- a/baptism.html
+++ b/baptism.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Fredoka:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --title-font: 'Luckiest Guy', cursive;
-      --body-font: 'Fredoka', sans-serif;
+      --title-font: 'Cormorant Garamond', serif;
+      --body-font: 'Cormorant Garamond', serif;
       --glass: rgba(0,0,0,0.68);
       --text-light: #fff;
     }
 
     body {
       margin: 0;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       background: url("Background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--text-light);
@@ -33,7 +33,7 @@
     }
 
     h1 {
-      font-family: var(--title-font);
+      font-family: 'Cormorant Garamond', serif;
       letter-spacing: 1px;
       text-align: center;
       font-size: 3rem;
@@ -66,7 +66,7 @@
       color: #000;
       margin-top: 0.3rem;
       resize: vertical;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
     }
 
     .options label {
@@ -82,7 +82,7 @@
       cursor: pointer;
       font-size: 1rem;
       margin-top: 0.5rem;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
     }
 
     .next-btn {
