--- a/menu.html
+++ b/menu.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Fredoka:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --title-font: 'Luckiest Guy', cursive;
-      --body-font: 'Fredoka', sans-serif;
+      --title-font: 'Cormorant Garamond', serif;
+      --body-font: 'Cormorant Garamond', serif;
       --glass: rgba(0,0,0,0.68);
       --text-light: #fff;
     }
 
     body {
       margin: 0;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       background: url("Background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--text-light);
@@ -36,7 +36,7 @@
     }
 
     h1 {
-      font-family: var(--title-font);
+      font-family: 'Cormorant Garamond', serif;
       font-size: 3rem;
       text-align: center;
       margin-bottom: 0.5rem;
@@ -61,7 +61,7 @@
       border: none;
       background: #8aaaaf;
       color: #000;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       font-size: 1.15rem;
       cursor: pointer;
       text-align: left;
