--- a/name.html
+++ b/name.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Fredoka:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --title-font: 'Luckiest Guy', cursive;
-      --body-font: 'Fredoka', sans-serif;
+      --title-font: 'Cormorant Garamond', serif;
+      --body-font: 'Cormorant Garamond', serif;
       --glass: rgba(0,0,0,0.68);
       --text-light: #fff;
     }
 
     body {
       margin: 0;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       background: url("Background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--text-light);
@@ -36,7 +36,7 @@
     }
 
     h1 {
-      font-family: var(--title-font);
+      font-family: 'Cormorant Garamond', serif;
       font-size: 2.5rem;
       text-align: center;
       margin-bottom: 0.5rem;
@@ -60,7 +60,7 @@
       padding: 0.7rem;
       border-radius: 0.5rem;
       border: none;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       font-size: 1rem;
     }
 
@@ -71,7 +71,7 @@
       border: none;
       background: #8aaaaf;
       color: #000;
-      font-family: var(--body-font);
+      font-family: 'Cormorant Garamond', serif;
       font-size: 1.1rem;
       cursor: pointer;
       display: block;
@@ -109,10 +109,10 @@
   <label for="classSelect">Class</label>
   <select id="classSelect">
     <option value="">-- Select your class --</option>
-    <option value="7A">7A</option>
-    <option value="7B">7B</option>
-    <option value="8A">8A</option>
-    <option value="8B">8B</option>
+    <option value="F8">F8</option>
+    <option value="F7">F7</option>
+    <option value="F6">F6</option>
+    <option value="F5">F5</option>
     <!-- Add more classes here -->
   </select>
 
@@ -129,12 +129,65 @@
 
 <script>
   /** 🔽 EDIT THIS PART WITH YOUR REAL CLASS LISTS 🔽 **/
-  const studentsByClass = {
-    "7A": ["Alice", "Ben", "Chloe", "Daniel"],
-    "7B": ["Ella", "Finn", "Grace", "Harry"],
-    "8A": ["Isla", "Jack", "Kian", "Lily"],
-    "8B": ["Mia", "Noah", "Olivia", "Peter"]
-  };
+const studentsByClass = {
+  "F8": [
+    "Cheung, J",
+    "de Beaufort, A",
+    "Griffin, C",
+    "Gueroult, J",
+    "Habboush, R",
+    "Harrod, K",
+    "Lennkh, A",
+    "Lopes Vieira, L",
+    "Nunn, W",
+    "Oldfield, I",
+    "Paska, M",
+    "Prentice, H",
+    "Sexton, A",
+    "Stamatiou, A",
+    "Taylor, S",
+    "Thind, A",
+    "Whately, C"
+  ],
+  "F7": [
+    "Amihyia-Boggan, D",
+  "Chen, E",
+  "Egea, C",
+  "Etienne-Stone, D",
+  "Henderson-Stewart, P",
+  "Hoare, C",
+  "Joseph, N",
+  "Lopopolo Garcia-Primi, L",
+  "Myerberg, T",
+  "Pilgrim, L",
+  "Sanders, S",
+  "Stephenson, A",
+  "Stergiopoulos, T"
+  ],
+  "F6": [
+   "Aitken, M",
+  "Cheung, E",
+  "Hebert, M",
+  "Milekhin, P",
+  "Palengat, A",
+  "Tombor, M"
+  ],
+  "F5": [
+   "Cabeza, P",
+  "Herb, G",
+  "Hitchen, C",
+  "Howell, S",
+  "Lagasse, E",
+  "Mashali, M",
+  "Myerberg, R",
+  "Seidel, P",
+  "Schwartz, O",
+  "Tombor, M",
+  "Tümen, A",
+  "Williams, T",
+  "Worrall, B"
+  ]
+};
   /** 🔼 EDIT THIS PART WITH YOUR REAL CLASS LISTS 🔼 **/
 
   const classSelect = document.getElementById("classSelect");
