--- a/baptism.html
+++ b/baptism.html
@@ -10,15 +10,16 @@
 
   <style>
     :root {
-      --title-font: 'Cormorant Garamond', serif;
-      --body-font: 'Cormorant Garamond', serif;
+      --title-font: 'Arial', serif;
+      --body-font: 'Arial', serif;
       --glass: rgba(0,0,0,0.68);
       --text-light: #fff;
     }
 
     body {
+  font-size:20px;
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
       background: url("Background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--text-light);
@@ -33,7 +34,7 @@
     }
 
     h1 {
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
       letter-spacing: 1px;
       text-align: center;
       font-size: 3rem;
@@ -66,7 +67,7 @@
       color: #000;
       margin-top: 0.3rem;
       resize: vertical;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
     }
 
     .options label {
@@ -82,7 +83,7 @@
       cursor: pointer;
       font-size: 1rem;
       margin-top: 0.5rem;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
     }
 
     .next-btn {
