--- a/menu.html
+++ b/menu.html
@@ -10,15 +10,16 @@
 
   <style>
     :root {
-      --title-font: 'Cormorant Garamond', serif;
-      --body-font: 'Cormorant Garamond', serif;
+      --title-font: 'Arial', serif;
+      --body-font: 'Arial', serif;
       --glass: rgba(0,0,0,0.68);
       --text-light: #fff;
     }
 
     body {
+  font-size:20px;
       margin: 0;
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
       background: url("Background.jpg") no-repeat center center fixed;
       background-size: cover;
       color: var(--text-light);
@@ -36,7 +37,7 @@
     }
 
     h1 {
-      font-family: 'Cormorant Garamond', serif;
+      font-family: 'Arial', serif;
       font-size: 3rem;
       text-align: center;
       margin-bottom: 0.5rem;
@@ -61,8 +62,8 @@
       border: none;
       background: #8aaaaf;
       color: #000;
-      font-family: 'Cormorant Garamond', serif;
-      font-size: 1.15rem;
+      font-family: 'Arial', serif;
+      font-size:1.35rem;
       cursor: pointer;
       text-align: left;
       transition: transform 0.2s ease, background 0.2s ease;
